# cut-it

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/cut_it/: __init__.py  cli.py  config.py  formatter.py  localization.py  splitter.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_formatter.py  test_integration.py  test_localization.py  test_splitter.py
