[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cut-it"
dynamic = ["version"]
description = "Semantic text chunking tool that converts documents into organized task lists"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Arthur Souza Rodrigues", email = "arthrod@umich.edu"},
]
keywords = ["text", "chunking", "semantic", "tasks", "llm", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "semantic-text-splitter>=0.8.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cut-it"
Repository = "https://github.com/yourusername/cut-it"
Issues = "https://github.com/yourusername/cut-it/issues"

[project.scripts]
cut-it = "cut_it.cli:app"

[tool.hatch.version]
path = "src/cut_it/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cut_it"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
